[project]
name = "codeyowon"
version = "0.1.0"
description = "Coding agent for terminal or mcp."
authors = [{ name = "Milhan Kim", email = "kimmilhan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.0.0",
    "smolagents[docker,e2b,gradio,litellm,mcp,openai,toolkit,vision]>=1.18.0",
    "fastmcp>=2.8.1",
    "typer>=0.16.0",
    "textual>=0.45.0",
]


[project.scripts]
yowon = "yowon.cli:cli"
yowon-mcp = "yowon.server:main"
yowon-tui = "yowon.tui:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["tests/**"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "strict"
reportImportCycles = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportPrivateUsage = true
include = ["yowon"]
exclude = ["tests/**"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
pythonPlatform = "Linux"
verboseOutput = true

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
